--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,2 +1,4 @@
 item.contenttweaker.plate_treated=Treated Plate
-item.contenttweaker.leather_oiled=Oiled Leather
+item.contenttweaker.oiled_leather=Oiled Leather
+item.contenttweaker.irradiated_flesh=Irradiated Flesh
+item.contenttweaker.ingot_crude_steel=Crude Steel Ingot
