--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -5,3 +5,4 @@ item.contenttweaker.ingot_crude_steel=Crude Steel Ingot
 item.contenttweaker.impure_steel.name=Impure Steel Ingot
 fluid.quicklime=Molten Quicklime
 fluid.impuresteel=Molten Impure Steel
+tile.contenttweaker.nether_gold_ore.name=Nether Gold Ore
