Some lang file stuff

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -3,6 +3,10 @@ item.contenttweaker.oiled_leather=Oiled Leather
 item.contenttweaker.irradiated_flesh=Irradiated Flesh
 item.contenttweaker.ingot_crude_steel=Crude Steel Ingot
 item.contenttweaker.impure_steel.name=Impure Steel Ingot
+item.contenttweaker.impure_steel_nugget.name=Impure Steel Nugget
+item.contenttweaker.calcium_sulfide.name=Calcium Sulfide
+item.contenttweaker.sulfuric_quicklime.name=Sulfuric Quicklime
 fluid.quicklime=Molten Quicklime
 fluid.impuresteel=Molten Impure Steel
 tile.contenttweaker.nether_gold_ore=Nether Gold Ore
+tile.contenttweaker.impure_steel_block=Block of Impure Steel
