--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -1,12 +1,30 @@
-item.contenttweaker.plate_treated=Treated Plate
-item.contenttweaker.oiled_leather=Oiled Leather
-item.contenttweaker.irradiated_flesh=Irradiated Flesh
-item.contenttweaker.ingot_crude_steel=Crude Steel Ingot
-item.contenttweaker.impure_steel.name=Impure Steel Ingot
+// Items
+item.contenttweaker.ingot_guano.name=Guano
+item.contenttweaker.treated_plate.name=Treated Plate
+item.contenttweaker.oiled_leather.name=Oiled Leather
+item.contenttweaker.irradiated_flesh.name=Irradiated Flesh
+item.contenttweaker.impure_steel_ingot.name=Impure Steel Ingot
 item.contenttweaker.impure_steel_nugget.name=Impure Steel Nugget
 item.contenttweaker.calcium_sulfide.name=Calcium Sulfide
 item.contenttweaker.sulfuric_quicklime.name=Sulfuric Quicklime
+item.contenttweaker.guano.name=Guano
+item.contenttweaker.guano_ingot.name=Guano Ingot
+item.contenttweaker.sinew.name=Sinew
+// Fluids
 fluid.quicklime=Molten Quicklime
 fluid.impuresteel=Molten Impure Steel
-tile.contenttweaker.nether_gold_ore=Nether Gold Ore
-tile.contenttweaker.impure_steel_block=Block of Impure Steel
+fluid.brine=Brine
+fluid.irradiated_Blood=Irratiated Blood
+fluid.monster_essence=Monster Essence
+// Blocks
+tile.contenttweaker.nether_gold_ore.name=Nether Gold Ore
+tile.contenttweaker.impure_steel_block.name=Block of Impure Steel
+tile.contenttweaker.nether_magnesium_ore.name=Nether Magnesium Ore
+tile.contenttweaker.nether_lithium_ore.name=Nether Lithium Ore
+tile.contenttweaker.nether_boron_ore.name=Nether Boron Ore
+tile.contenttweaker.nether_thorium_ore.name=Nether Thorium Ore
+tile.contenttweaker.nether_uranium_ore.name=Nether Uranium Ore
+
+
+
+tile.transloc.block_translocator.name=Entity Translocator
