Added 16 colored ceramic frame blocks with ContentTweaker

--- a/resources/contenttweaker/lang/en_us.lang
+++ b/resources/contenttweaker/lang/en_us.lang
@@ -31,6 +31,24 @@ tile.contenttweaker.nether_boron_ore.name=Nether Boron Ore
 tile.contenttweaker.nether_thorium_ore.name=Nether Thorium Ore
 tile.contenttweaker.nether_uranium_ore.name=Nether Uranium Ore
 
+// Age portal blocks:
+tile.contenttweaker.age_portal_black.name=Black Ceramic Frame
+tile.contenttweaker.age_portal_red.name=Red Ceramic Frame
+tile.contenttweaker.age_portal_green.name=Green Ceramic Frame
+tile.contenttweaker.age_portal_brown.name=Brown Ceramic Frame
+tile.contenttweaker.age_portal_blue.name=Blue Ceramic Frame
+tile.contenttweaker.age_portal_purple.name=Void Age Portal Frame
+tile.contenttweaker.age_portal_cyan.name=Cyan Ceramic Frame
+tile.contenttweaker.age_portal_light_gray.name=Light Gray Ceramic Frame
+tile.contenttweaker.age_portal_gray.name=Mining Age Portal Frame
+tile.contenttweaker.age_portal_pink.name=Pink Ceramic Frame
+tile.contenttweaker.age_portal_lime_green.name=Lime Green Ceramic Frame
+tile.contenttweaker.age_portal_yellow.name=Yellow Ceramic Frame
+tile.contenttweaker.age_portal_light_blue.name=Light Blue Ceramic Frame
+tile.contenttweaker.age_portal_magenta.name=Magenta Ceramic Frame
+tile.contenttweaker.age_portal_orange.name=Orange Ceramic Frame
+tile.contenttweaker.age_portal_white.name=White Ceramic Frame
+
 
 
 tile.transloc.block_translocator.name=Entity Translocator
